--- a/data/index.html
+++ b/data/index.html
@@ -62,7 +62,17 @@
                 <p><a>链接颜色a</a></p>
                 <p class="ui-txt-feeds">feeds链接：ui-txt-feeds</p>
             </div>
+        </div> 
+    </div>
+    <div class="demo-item">
+        <p class="demo-desc">文本两端对齐</p>
+        <div class="demo-block">
+            <div class="ui-whitespace">
+                <p class="ui-txt-justify-one">一行：ui-txt-justify-one</p>
+                <p class="ui-txt-justify">普通的多行文本内容：ui-txt-justify在首个《进击的巨人》预热视频中只是描述了一个巨人恰好拿起一人准备放进嘴巴里面，而另个场景则是超大型巨人附着浓重的烟雾将巨手拍下来。将于今年8月1日上映。</p>
+            </div>
         </div>
+        
     </div>
 </section>
 
@@ -427,16 +437,16 @@
     <div class="demo-item">
         <p class="demo-desc">text-align:justify两端对齐</p>
         <div class="demo-block">  
-            <div class="ui-justify ui-whitespace">
+            <div>
                 <p class="demo-desc">一行</p>
-                <ul>
+                <ul class="ui-justify ui-whitespace">
                     <li><div class="test-img"></div><p>xxx</p></li>
                     <li><div class="test-img"></div><p>xxx</p></li>
                     <li><div class="test-img"></div><p>xxx</p></li>
                     <li><div class="test-img"></div><p>xxx</p></li>
                 </ul>
                 <p class="demo-desc">多行</p>
-                <ul>
+                <ul class="ui-justify ui-whitespace">
                     <li><div class="test-img"></div><p>xxx</p></li>
                     <li><div class="test-img"></div><p>xxx</p></li>
                     <li><div class="test-img"></div><p>xxx</p></li>
@@ -889,7 +899,7 @@
                             <div class="ui-grid-trisect-img">
                                 <span style="background-image:url(http://placeholder.qiniudn.com/190x284)"></span>
                             </div>
-                            <div class="ui-txt-padding">
+                            <div>
                                 <h4 class="ui-nowrap-multi">长书名长书名长书名长书名长书名长书名长书名</h4>
                                 <h5 class="ui-nowrap">小仙</h5>
                             </div>
@@ -900,7 +910,7 @@
                             <div class="ui-grid-trisect-img">
                                 <span style="background-image:url(http://placeholder.qiniudn.com/190x284)"></span>
                             </div>
-                            <div class="ui-txt-padding">
+                            <div>
                                 <h4 class="ui-nowrap-multi">长书名长书名长书名长书名长书名长书名长书名</h4>
                                 <h5 class="ui-nowrap">小仙</h5>
                             </div>
@@ -911,7 +921,7 @@
                             <div class="ui-grid-trisect-img">
                                 <span style="background-image:url(http://placeholder.qiniudn.com/190x284)"></span>
                             </div>
-                            <div class="ui-txt-padding">
+                            <div>
                                 <h4 class="ui-nowrap-multi">长书名长书名长书名长书名长书名长书名长书名</h4>
                                 <h5 class="ui-nowrap">小仙</h5>
                             </div>
@@ -1483,18 +1493,42 @@
         <div class="demo-block">
             <ul class="ui-list ui-list-one ui-list-link ui-border-tb">
                 <li class="ui-border-t">
-                    <div class="ui-list-thumb-s">
-                        <span style="background-image:url(http://placeholder.qiniudn.com/56x56)"></span>
+                    <div class="ui-list-thumb">
+                        <span style="background-image:url(http://placeholder.qiniudn.com/100x100)"></span>
                     </div>
-                    <h4 class="ui-nowrap">性别</h4>
-                    <div class="ui-txt-info">男</div>
+                    <div class="ui-list-info">
+                        <h4 class="ui-nowrap">性别</h4>
+                        <div class="ui-txt-info">男</div>
+                    </div>
                 </li>
                 <li class="ui-border-t">
-                    <div class="ui-list-thumb-s">
-                        <span style="background-image:url(http://placeholder.qiniudn.com/56x56)"></span>
+                    <div class="ui-list-thumb">
+                        <span style="background-image:url(http://placeholder.qiniudn.com/100x100)"></span>
                     </div>
-                    <h4 class="ui-nowrap">生日</h4>
-                    <div class="ui-reddot ui-reddot-static"></div>
+                    <div class="ui-list-info">
+                        <h4 class="ui-nowrap">生日</h4>
+                        <div class="ui-reddot ui-reddot-static"></div>
+                    </div>
+                </li>
+            </ul>
+            <ul class="ui-list ui-list-one ui-list-link ui-border-tb">
+                <li>
+                    <div class="ui-list-thumb">
+                        <span style="background-image:url(http://placeholder.qiniudn.com/100x100)"></span>
+                    </div>
+                    <div class="ui-list-info ui-border-t">
+                        <h4 class="ui-nowrap">性别</h4>
+                        <div class="ui-txt-info">男</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="ui-list-thumb">
+                        <span style="background-image:url(http://placeholder.qiniudn.com/100x100)"></span>
+                    </div>
+                    <div class="ui-list-info ui-border-t">
+                        <h4 class="ui-nowrap">生日</h4>
+                        <div class="ui-reddot ui-reddot-static"></div>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -1577,6 +1611,30 @@
         </div>
     </div>
     <div class="demo-item">
+        <p class="demo-desc">图文列表带头像</p>
+        <div class="demo-block">
+            <ul class="ui-list ui-list-link ui-border-tb">
+                <li>
+                    <div class="ui-avatar">
+                        <span style="background-image:url(http://placeholder.qiniudn.com/100x100)"></span>
+                    </div>
+                    <div class="ui-list-info ui-border-t">
+                        <h4 class="ui-nowrap">这是标题，加ui-nowrap可以超出长度截断</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="ui-avatar">
+                        <span style="background-image:url(http://placeholder.qiniudn.com/100x100)"></span>
+                    </div>
+                    <div class="ui-list-info ui-border-t">
+                        <h4 class="ui-nowrap">这是标题，加ui-nowrap可以超出长度截断</h4>
+                        <p class="ui-nowrap">这是内容，加ui-nowrap可以超出长度截断</p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="demo-item">
         <p class="demo-desc">图文列表带小头像</p>
         <div class="demo-block">
             <ul class="ui-list ui-list-function ui-list-link ui-border-tb">
@@ -1599,8 +1657,9 @@
                     <div class="ui-btn">PK</div>
                 </li>
             </ul>
-            </div>
+        </div>
     </div>
+
     <div class="demo-item">
         <p class="demo-desc">图文列表</p>
         <div class="demo-block">
