--- a/data/components.html
+++ b/data/components.html
@@ -6,7 +6,7 @@
         <meta name="format-detection" content="telephone=no">
         <title>FrozenUI Demo</title>
         <script type="text/javascript" src="http://tajs.qq.com/stats?sId=37342703" charset="UTF-8"></script>
-        <link rel="stylesheet" href="../css/frozen.css">
+        <link rel="stylesheet" href="http://frozenui.github.io/frozenui/css/frozen.css">
         <link rel="stylesheet" href="demo.css">
         <script src="../lib/zepto.min.js"></script>
         <script src="../js/frozen.js"></script>
@@ -1134,6 +1134,21 @@
         </div>
     </div>
     <div class="demo-item">
+        <p class="demo-desc">默认</p>
+        <div class="demo-block">
+            <table class="ui-table ui-border-tb">
+                <thead>
+                <tr><th>已购买</th><th>状态</th><th>会员到期时间</th></tr>
+                </thead>
+                <tbody>
+                <tr><td>2014257777</td><td>使用中</td><td>2016-02-06</td></tr>
+                <tr><td>2014257777</td><td>待付款</td><td><a href="#">付款</a></td></tr>
+                <tr><td>2014257777</td><td class="ui-border-r">待付款</td></tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div class="demo-item">
         <p class="demo-desc">全框</p>
         <div class="demo-block">
             <table class="ui-table ui-border">
@@ -1597,7 +1612,19 @@
 	<div class="demo-item">
 		<p class="demo-desc">标签栏</p>
 		<div class="demo-block">
-			<div class="ui-tab">
+			<div class="ui-tab" id="tab1">
+			    <ul class="ui-tab-nav ui-border-b">
+			        <li class="current">热门推荐</li>
+			        <li>全部表情</li>
+			        <li>表情</li>
+			    </ul>
+			    <ul class="ui-tab-content" style="width:300%">
+			        <li>内容1</li>
+			        <li>内容2</li>
+			        <li>内容3</li>
+			    </ul>
+			</div>
+			<div class="ui-tab" id="tab2">
 			    <ul class="ui-tab-nav ui-border-b">
 			        <li class="current">热门推荐</li>
 			        <li>全部表情</li>
@@ -1612,7 +1639,12 @@
 		</div>
 		<script class="demo-script">
 		(function (){
-            var tab = new fz.Scroll('.ui-tab', {
+            var tab = new fz.Scroll('#tab1', {
+		        role: 'tab',
+		        autoplay: true,
+		        interval: 3000
+		    });
+		    var tab2 = new fz.Scroll('#tab2', {
 		        role: 'tab',
 		        autoplay: true,
 		        interval: 3000
@@ -1635,7 +1667,7 @@
     <div class="demo-item">
         <p class="demo-desc">轮播组件</p>
         <div class="demo-block">
-            <div class="ui-slider">
+            <div class="ui-slider" id="slider1">
                 <ul class="ui-slider-content" style="width: 300%">
                     <li><span style="background-image:url(http://placeholder.qiniudn.com/640x200)"></span></li>
                     <li><span style="background-image:url(http://placeholder.qiniudn.com/640x200)"></span></li>
@@ -1643,12 +1675,24 @@
                 </ul>
             </div>
             内容
-
+            <div class="ui-slider" id="slider2">
+                <ul class="ui-slider-content" style="width: 300%">
+                    <li><span style="background-image:url(http://placeholder.qiniudn.com/640x200)"></span></li>
+                    <li><span style="background-image:url(http://placeholder.qiniudn.com/640x200)"></span></li>
+                    <li><span style="background-image:url(http://placeholder.qiniudn.com/640x200)"></span></li>
+                </ul>
+            </div>
             
         </div>
         <script class="demo-script">
         (function (){
-            var slider = new fz.Scroll('.ui-slider', {
+            var slider = new fz.Scroll('#slider1', {
+                role: 'slider',
+                indicator: true,
+                autoplay: true,
+                interval: 3000
+            });
+            var slider2 = new fz.Scroll('#slider2', {
                 role: 'slider',
                 indicator: true,
                 autoplay: true,
